completed explaining how website works in theory

--- a/HowItWorks/1.HowDoesWebsitesWorks.md
+++ b/HowItWorks/1.HowDoesWebsitesWorks.md
@@ -49,13 +49,13 @@ By leveraging these frameworks and libraries, developers can build more complex 
         - here **css** is a styling langauge, 
         - but **JavaScript** *(JS)* is a programming a language.
 
-### How Websites look with
+### How Websites looks
 I have choosen a Survey website Form as an example *(you can view all the source file inside folders 'HtmlFiles', 'CssFiles', 'JsFiles' in the directory 'HowItWorks/OtherFiles')*
-- #### Only HTML
+- #### With Only HTML
     <img src="./OtherFiles/images/SurveyFormWithOnlyHtml.png" alt="Submit Form With Only Html" width="300" height="200">
-- #### HTML and CSS
+- #### With HTML and CSS
     <img src="./OtherFiles/images/SurveyFormWithHtmlAndCss.png" alt="Submit Form With Html and Css" width="300" height="200">
-- #### HTML, CSS, JavaScript
+- #### with HTML, CSS, JavaScript
     you wont be able to find much difference with JavaScript Until you interact with an actual website with JavaScript.
 
     <img src="./OtherFiles/images/SurveyFormWithHtmlAndCss.png" alt="Submit Form With Html, Css and JavaScript
