added course content link in README.md

--- a/HowItWorks/1.HowDoesWebsitesWorks.md
+++ b/HowItWorks/1.HowDoesWebsitesWorks.md
@@ -2,9 +2,14 @@
 
 **HTML, CSS, and JavaScript** are the core technologies that form the foundation of website and website development (in short web-development). These are used to create the front end of **websites**. Frameworks like **React, Angular, etc.** are built on top of these core technologies (*especially JavaScript*) to simplify and enhance the development process.
 
+#### Analogy
+- **HTML**: The foundation or skeleton of a building *(i.e, website)*.
+- **CSS**: The paint, decorations, and furnishings that make the building look attractive and functional *(like font size, color, types, etc)*.
+- **JavaScript**: The systems and gadgets (e.g., elevators, lights, smart devices) that make the building interactive and user-friendly *(like loading contents with in the page, without websites reloading)*.
+
 ---
 
-### 2. Purpose of these Technologies  
+### 2. Specific Purpose of these Technologies (HTML, CSS, JS)
 
 #### **HTML:**  
 Provides the base structure of a website, forming the backbone necessary for functionality. Examples of **HTML** functionalities include:  
@@ -42,11 +47,13 @@ These are **JavaScript frameworks and libraries** built on top of the core web t
 
 By leveraging these frameworks and libraries, developers can build more complex and dynamic applications with less repetitive code and greater efficiency.
 
+---
+
 ### how websites work in order ( HTML, CSS, JS ):
 - website should be developed ads will be in the below order  
     - 1. **HTML** is the core script *(technology)* needed for website to work. Without **HTML** there is no way for wbesites to work.
-    - 2. **CSS and JavaSacript *(JS)*** are the technologies that just makes the website look good,  interactable, etc like
-        - here **css** is a styling langauge, 
+    - 2. **CSS and JavaSacript *(JS)*** are the technologies that just makes the website look good,  interactable, etc. Here:
+        - **css** is a styling langauge, 
         - but **JavaScript** *(JS)* is a programming a language.
 
 ### How Websites looks
@@ -61,16 +68,9 @@ I have choosen a Survey website Form as an example *(you can view all the source
     <img src="./OtherFiles/images/SurveyFormWithHtmlAndCss.png" alt="Submit Form With Html, Css and JavaScript
     " width="300" height="200">
 
-
-### Analogy
-- **HTML**: The foundation or skeleton of a building.
-- **CSS**: The paint, decorations, and furnishings that make the building look attractive and functional.
-- **JavaScript**: The systems and gadgets (e.g., elevators, lights, smart devices) that make the building interactive and user-friendly.
-
 ### Summary
-- HTML is the **core** structure.
-- CSS defines the **style** and visual presentation.
-- JavaScript provides **behavior** and interactivity.
+- HTML forms the **core** structure of an website.
+- CSS defines the **style** and **visual presentation**.
+- JavaScript provides **behavior** and **interactivity**.
 
 --- 
-
